Opened 11 years ago
Closed 11 years ago
#10791 closed bug (fixed)
Wrong resolution with ATi Mobility Radeon HD 3430
Reported by: | pepito1 | Owned by: | kallisti5 |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Graphics/radeon_hd | Version: | R1/Development |
Keywords: | ati, radeon, mobility, resolution, driver | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
My resolution is wrongly set to 1024x768, when it should be 1280x800. Tested in nightly hrev47169. This also happens in Haiku Alpha 4.1, and has been happening for as long as I can remember.
I have attached screenshots of what "Devices" say about my card.
Attachments (4)
Change History (10)
by , 11 years ago
Attachment: | Detailed.png added |
---|
comment:1 by , 11 years ago
Component: | Drivers/Graphics → Drivers/Graphics/radeon_hd |
---|---|
Owner: | changed from | to
follow-up: 3 comment:2 by , 11 years ago
I'll need a copy of your syslog to give you a good answer on what is going on.
Could you grab of it at "/var/log/syslog" and attach it to this case?
comment:3 by , 11 years ago
Replying to kallisti5:
I'll need a copy of your syslog to give you a good answer on what is going on.
Could you grab of it at "/var/log/syslog" and attach it to this case?
Of course, no problem.
comment:4 by , 11 years ago
comment:6 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Detailed tab of Devices