radeon_hd: Add PCIID for Radeon HD 3430

* Should resolve #10791